name: macaw-symbolic
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE

library
  build-depends:
    base >= 4,
    bv-sized >= 1.0.0,
    containers,
    elf-edit,
    IntervalMap >= 0.6 && < 0.7,
    crucible >= 0.4,
    crucible-llvm,
    lens,
    macaw-base,
    mtl,
    parameterized-utils,
    prettyprinter >= 1.7.0,
    text,
    vector,
    bytestring,
    what4 >= 0.4.0

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.Symbolic
    Data.Macaw.Symbolic.Backend
    Data.Macaw.Symbolic.Memory
    Data.Macaw.Symbolic.MemOps
    Data.Macaw.Symbolic.Testing
  other-modules:
    Data.Macaw.Symbolic.Bitcast
    Data.Macaw.Symbolic.CrucGen
    Data.Macaw.Symbolic.PersistentState

  ghc-options: -Wall -Wcompat
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

  if impl(ghc >= 8.6)
    default-extensions: NoStarIsType

test-suite doctests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: doctest.hs
  ghc-options: -Wall -Wcompat -threaded
  build-depends: base, macaw-base, macaw-symbolic, doctest >= 0.10 && < 0.17

               
