name: macaw-x86
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.9.2
license:       BSD3
license-file:  LICENSE
tested-with: GHC == 8.0.2

library
  build-depends:
    base >= 4,
    ansi-wl-pprint,
    bytestring,
    containers,
    flexdis86 >= 0.1.2,
    lens >= 4.7,
    macaw-base,
    mtl,
    parameterized-utils,
    text,
    vector

  hs-source-dirs: src

  exposed-modules:
    Data.Macaw.X86
    Data.Macaw.X86.ArchTypes
    Data.Macaw.X86.Conditions
    Data.Macaw.X86.Flexdis
    Data.Macaw.X86.Generator
    Data.Macaw.X86.Getters
    Data.Macaw.X86.InstructionDef
    Data.Macaw.X86.Monad
    Data.Macaw.X86.Semantics
    Data.Macaw.X86.Semantics.AVX
    Data.Macaw.X86.SyscallInfo
    Data.Macaw.X86.SyscallInfo.FreeBSD
    Data.Macaw.X86.SyscallInfo.Linux
    Data.Macaw.X86.X86Flag
    Data.Macaw.X86.X86Reg
    Data.Macaw.X86.X87ControlReg

  ghc-options: -Wall -Werror
  ghc-options: -fno-warn-unticked-promoted-constructors
  ghc-prof-options: -O2 -fprof-auto-top

test-suite macaw-x86-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  other-modules: ElfX64Linux
  hs-source-dirs: tests
  build-depends:
    base,
    bytestring,
    containers,
    elf-edit,
    exceptions,
    filemanip,
    filepath,
    lens,
    macaw-base,
    parameterized-utils,
    macaw-x86,
    temporary,
    tasty,
    tasty-hunit
