name: macaw-x86-symbolic
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE

library
  build-depends: base >= 4,
                 crucible >= 0.4,
                 crucible-llvm,
                 flexdis86 >= 0.1.2,
                 lens,
                 macaw-base,
                 macaw-symbolic,
                 macaw-x86,
                 mtl,
                 parameterized-utils,
                 what4 >= 0.4
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Data.Macaw.X86.Symbolic
    Data.Macaw.X86.Crucible

  ghc-options: -Wall
  ghc-prof-options: -O2 -fprof-auto-top
  if impl(ghc >= 8.6)
     default-extensions: NoStarIsType

test-suite macaw-x86-symbolic-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:
    base >= 4,
    bytestring,
    containers,
    crucible,
    crucible-llvm,
    elf-edit,
    macaw-base,
    macaw-symbolic,
    macaw-x86,
    macaw-x86-symbolic,
    parameterized-utils,
    text,
    what4,
    vector
