name: macaw-x86-symbolic
version: 0.0.1
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE

library
  build-depends: base >= 4,
                 bv-sized >= 1.0.0,
                 crucible >= 0.4,
                 crucible-llvm,
                 flexdis86 >= 0.1.2,
                 lens,
                 macaw-base,
                 macaw-symbolic,
                 macaw-x86 >= 0.3.1,
                 mtl,
                 parameterized-utils,
                 prettyprinter >= 1.7.0,
                 vector,
                 what4 >= 0.4
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Data.Macaw.X86.Symbolic
    Data.Macaw.X86.Crucible

  ghc-options: -Wall -Wcompat
  ghc-prof-options: -O2 -fprof-auto-top
  if impl(ghc >= 8.6)
     default-extensions: NoStarIsType

test-suite macaw-x86-symbolic-tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall -Wcompat
  main-is: Main.hs
  hs-source-dirs: tests
  build-depends:
    base >= 4,
    bytestring,
    containers,
    crucible,
    crucible-llvm,
    elf-edit,
    macaw-base,
    macaw-symbolic,
    macaw-x86,
    macaw-x86-symbolic,
    parameterized-utils,
    text,
    what4,
    vector
