name: compare-dwarfdump
version: 0.1.0
author: Galois, Inc.
maintainer: jhendrix@galois.com
build-type: Simple
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE

executable compare-dwarfdump
  default-language: Haskell2010
  build-depends:
    base >= 0,
    bytestring,
    containers,
    directory,
    elf-edit >= 0.38,
    filepath,
    galois-dwarf >= 0.2.2.1,
    mtl,
    process,
    vector,
    zlib

  hs-source-dirs: src
  main-is: Main.hs
